[package]
name = "polkadot-cli"
description = "Polkadot Relay-chain Client Node"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { workspace = true, features = ["default", "derive"], optional = true }
futures = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
pyroscope_pprofrs = { workspace = true, default-features = true, optional = true }
thiserror = { workspace = true, default-features = true }
# TODO: use workspace dependency
pyro = { package = "pyroscope", version = "0.5.3", optional = true }

polkadot-node-core-pvf-execute-worker = { workspace = true, default-features = true, optional = true }
polkadot-node-core-pvf-prepare-worker = { workspace = true, default-features = true, optional = true }
polkadot-node-metrics = { workspace = true, default-features = true }
#polkadot-performance-test = { path = "../node/test/performance-test", optional = true }

frame-benchmarking-cli = { workspace = true, default-features = true, optional = true }
sc-cli = { workspace = true, default-features = true, optional = true }
sc-executor = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true, optional = true }
sc-storage-monitor = { workspace = true, default-features = true }
sc-sysinfo = { workspace = true, default-features = true }
sc-tracing = { workspace = true, default-features = true, optional = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
try-runtime-cli = { workspace = true, default-features = true, optional = true }

fc-cli = { workspace = true, default-features = true }
fc-db = { workspace = true, default-features = true }
vitreus-power-plant-runtime = { workspace = true, default-features = true }

chain-spec = { workspace = true, default-features = true }
# TODO: use workspace dependency
service = { package = "polkadot-service", path = "../node/service", default-features = false, features = ["sql", "txpool", "with-rocksdb-weights"], optional = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = ["db", "cli", "full-node"]
db = ["service/db"]
cli = [
	"clap",
	"sc-cli",
	"sc-service",
	"sc-tracing",
	"frame-benchmarking-cli",
	"try-runtime-cli",
	"polkadot-node-core-pvf-execute-worker",
	"polkadot-node-core-pvf-prepare-worker",
	"service",
]
runtime-benchmarks = [
	"service/runtime-benchmarks",
	"polkadot-node-metrics/runtime-benchmarks",
#	"polkadot-performance-test?/runtime-benchmarks",
	"vitreus-power-plant-runtime/runtime-benchmarks",
]
full-node = ["service/full-node"]
try-runtime = ["service/try-runtime", "try-runtime-cli/try-runtime"]
fast-runtime = ["service/fast-runtime"]
pyroscope = ["pyro", "pyroscope_pprofrs"]
#hostperfcheck = ["polkadot-performance-test"]

malus = ["full-node", "service/malus"]
runtime-metrics = ["service/runtime-metrics", "polkadot-node-metrics/runtime-metrics"]
