[package]
name = "vitreus-cli"
description = "Vitreus relay-chain client node"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { workspace = true, features = ["default", "derive"], optional = true }
futures = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
pyroscope = { workspace = true, default-features = true, optional = true }
pyroscope_pprofrs = { workspace = true, default-features = true, optional = true }
thiserror = { workspace = true, default-features = true }

polkadot-node-metrics = { workspace = true, default-features = true }
polkadot-node-primitives = { workspace = true, default-features = true }

sc-cli = { workspace = true, default-features = true, optional = true }
sc-service = { workspace = true, default-features = true, optional = true }
sc-storage-monitor = { workspace = true, default-features = true }
sc-sysinfo = { workspace = true, default-features = true }
sc-tracing = { workspace = true, default-features = true, optional = true }
sp-core = { workspace = true, default-features = true }

fc-cli = { workspace = true, default-features = true }
fc-db = { workspace = true, default-features = true }

chain-spec = { workspace = true, default-features = true }
vitreus-service = { workspace = true, default-features = false, features = ["sql", "txpool", "with-rocksdb-weights"], optional = true }
vitreus-power-plant-runtime = { workspace = true, default-features = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = ["db", "cli", "full-node"]
db = ["vitreus-service/db"]
cli = [
	"clap",
	"sc-cli",
	"sc-service",
	"sc-tracing",
	"vitreus-service",
]
runtime-benchmarks = [
	"polkadot-node-metrics/runtime-benchmarks",
	"vitreus-power-plant-runtime/runtime-benchmarks",
	"vitreus-service/runtime-benchmarks",
]
full-node = ["vitreus-service/full-node"]
try-runtime = ["vitreus-service/try-runtime"]
fast-runtime = ["vitreus-service/fast-runtime"]
pyroscope = ["dep:pyroscope", "pyroscope_pprofrs"]

# Configure the native runtimes to use.
mainnet-native = [
    "chain-spec/mainnet-native",
    "vitreus-service/mainnet-native",
]
testnet-native = [
    "chain-spec/testnet-native",
    "vitreus-service/testnet-native",
]

malus = ["full-node", "vitreus-service/malus"]
runtime-metrics = ["polkadot-node-metrics/runtime-metrics"]
